--- a/exposure-d.html
+++ b/exposure-d.html
@@ -102,9 +102,9 @@
     </form>
   </div>
   <div class="ui four column centered grid">
-    <button class="ui primary button next">
-        <a href="internships-a.html">NEXT</a>
-    </button>
+    <div class="buttonClass light-blue moveDown">
+      <a href="internships-a.html">READY TO BEGIN?</a>
+    </div>
   </div>
 </div>
 
