--- a/internships-a.html
+++ b/internships-a.html
@@ -71,9 +71,13 @@
             <form class="ui form">
               <!-- Question one -->
               <div class="field">
-                <label>HAVE YOU HAD ANY INTERNSHIPS?</label>
-                <button class="ui secondary button" type="button" name="ia"><a href="internships-d.html">YES</a></button>
-                <button class="ui secondary button" type="button" name="ib"><a href="internships-d.html">NO</a></button>
+                <p>HAVE YOU EVER HAD A MENTOR?</p>
+                <div class="buttonClassLeft light-blue">
+                  <a href="internships-d.html" id="ia">YES</a>
+                </div>
+                <div class="buttonClassRight light-blue">
+                  <a href="internships-d.html" id="ib">NO</a>
+                </div>
               </div>
         </div>
         <div class="eight wide column center">
