--- a/involvement-a.html
+++ b/involvement-a.html
@@ -71,9 +71,13 @@
             <form class="ui form">
               <!-- Question one -->
               <div class="field">
-                <label>ARE YOU PART OF AN ON-CAMPUS CLUB OR ORGANZIATION?</label>
-                <button class="ui secondary button" type="button" name="ma"><a href="involvement-d.html">YES</a></button>
-                <button class="ui secondary button" type="button" name="mb"><a href="involvement-d.html">NO</a></button>
+                <p>HAVE YOU EVER HAD A MENTOR?</p>
+                <div class="buttonClassLeft light-blue">
+                  <a href="involvement-d.html" id="ma">YES</a>
+                </div>
+                <div class="buttonClassRight light-blue">
+                  <a href="involvement-d.html" id="mb">NO</a>
+                </div>
               </div>
         </div>
         <div class="eight wide column center">
