--- a/involvement-d.html
+++ b/involvement-d.html
@@ -121,9 +121,9 @@
     </form>
   </div>
   <div class="ui four column centered grid">
-    <button class="ui primary button next">
-        <a href="thank-you.html">NEXT</a>
-    </button>
+    <div class="buttonClass light-blue moveDown">
+      <a href="thank-you.html">READY TO BEGIN?</a>
+    </div>
 
     <script type="text/javascript" rel="script" src="assets/js/main.js"></script>
   </div>
