--- a/mentorship-a.html
+++ b/mentorship-a.html
@@ -71,10 +71,15 @@
             <form class="ui form">
               <!-- Question one -->
               <div class="field">
-                <label>HAVE YOU EVER HAD A MENTOR?</label>
-                <button class="ui secondary button" type="button" name="ea"><a href="mentorship-d.html">YES</a></button>
-                <button class="ui secondary button" type="button" name="eb"><a href="mentorship-d.html">NO</a></button>
+                <p>HAVE YOU EVER HAD A MENTOR?</p>
+                <div class="buttonClassLeft light-blue">
+                  <a href="mentorship-d.html" id="ea">YES</a>
+                </div>
+                <div class="buttonClassRight light-blue">
+                  <a href="mentorship-d.html" id="eb">NO</a>
+                </div>
               </div>
+            </form>
         </div>
         <div class="eight wide column center">
             <img src="assets\img\Mentor.png" alt="">
