--- a/mentorship-d.html
+++ b/mentorship-d.html
@@ -100,9 +100,9 @@
     </form>
   </div>
   <div class="ui four column centered grid">
-    <button class="ui primary button next">
-        <a href="exposure-a.html">NEXT</a>
-    </button>
+    <div class="buttonClass light-blue moveDown">
+      <a href="exposure-a.html">READY TO BEGIN?</a>
+    </div>
   </div>
 </div>
 
