--- a/networking-a.html
+++ b/networking-a.html
@@ -71,9 +71,13 @@
             <form class="ui form">
               <!-- Question one -->
               <div class="field">
-                <label>HAVE YOU EVER ATTENDED A NETOWRKING EVENT?</label>
-                <button class="ui secondary button" type="button" name="ka"><a href="networking-d.html">YES</a></button>
-                <button class="ui secondary button" type="button" name="kb"><a href="networking-d.html">NO</a></button>
+                <p>HAVE YOU EVER HAD A MENTOR?</p>
+                <div class="buttonClassLeft light-blue">
+                  <a href="networking-d.html" id="ka">YES</a>
+                </div>
+                <div class="buttonClassRight light-blue">
+                  <a href="networking-d.html" id="kb">NO</a>
+                </div>
               </div>
         </div>
         <div class="eight wide column center">
