--- a/networking-d.html
+++ b/networking-d.html
@@ -133,9 +133,9 @@
     </form>
   </div>
   <div class="ui four column centered grid">
-    <button class="ui primary button next">
-        <a href="involvement-a.html">NEXT</a>
-    </button>
+    <div class="buttonClass light-blue moveDown">
+      <a href="involvement-a.html">READY TO BEGIN?</a>
+    </div>
   </div>
 </div>
 
