--- a/exposure-a.html
+++ b/exposure-a.html
@@ -71,9 +71,13 @@
             <form class="ui form">
               <!-- Question one -->
               <div class="field">
-                <label>HAVE YOU EVER CONSIDERED PARTICIPATING IN A STUDY ABROAD OR ACTIVE SERVICE PROGRAM?</label>
-                <button class="ui secondary button" type="button" name="ga"><a href="exposure-d.html">YES</a></button>
-                <button class="ui secondary button" type="button" name="gb"><a href="exposure-d.html">NO</a></button>
+                <p>HAVE YOU EVER HAD A MENTOR?</p>
+                <div class="buttonClassLeft light-blue">
+                  <a href="exposure-d.html" id="ga">YES</a>
+                </div>
+                <div class="buttonClassRight light-blue">
+                  <a href="exposure-d.html" id="gb">NO</a>
+                </div>
               </div>
         </div>
         <div class="eight wide column center">
